--- a/fluentlenium-festassert/pom.xml
+++ b/fluentlenium-festassert/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fluentlenium</groupId>
         <artifactId>fluentlenium-parent</artifactId>
-        <version>0.7.3-SNAPSHOT</version>
+        <version>0.7.3-jroper-baseurl-1</version>
     </parent>
     <groupId>org.fluentlenium</groupId>
     <artifactId>fluentlenium-festassert</artifactId>
