--- a/fluentlenium-testng/pom.xml
+++ b/fluentlenium-testng/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fluentlenium</groupId>
         <artifactId>fluentlenium-parent</artifactId>
-        <version>0.7.4-jroper-baseurl-1-SNAPSHOT</version>
+        <version>0.7.3-jroper-baseurl-2</version>
     </parent>
 
     <groupId>org.fluentlenium</groupId>
