--- a/fluentlenium-core/pom.xml
+++ b/fluentlenium-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fluentlenium</groupId>
         <artifactId>fluentlenium-parent</artifactId>
-        <version>0.7.3-jroper-baseurl-2</version>
+        <version>0.7.3-jroper-baseurl-3-SNAPSHOT</version>
     </parent>
     <groupId>org.fluentlenium</groupId>
     <artifactId>fluentlenium-core</artifactId>
